--- a/pdf-text.html
+++ b/pdf-text.html
@@ -1,1 +1,168 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Convert PDF files to Text online. Fast, secure, and easy-to-use PDF to Text converter." />
+  <meta name="keywords" content="PDF to Text, PDF Converter, Online PDF Tools" />
+  <meta name="author" content="Your Company Name" />
+  <title>PDF to Text - Online PDF Converter</title>
+  <link rel="canonical" href="https://www.yourwebsite.com/pdf-to-text" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      padding: 20px;
+      margin: 0;
+    }
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
+    header, footer {
+      text-align: center;
+      padding: 10px;
+      background: #007BFF;
+      color: white;
+      border-radius: 8px;
+      margin-bottom: 20px;
+    }
+    .ad {
+      text-align: center;
+      margin: 20px 0;
+      padding: 10px;
+      background: #f9f9f9;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+    }
+    h1 {
+      margin-top: 0;
+      color: #333;
+    }
+    .tool input[type="file"] {
+      margin-bottom: 10px;
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+    }
+    button {
+      padding: 10px 20px;
+      background-color: #007BFF;
+      border: none;
+      color: white;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+    .progress {
+      font-weight: bold;
+      color: #007BFF;
+    }
+    textarea {
+      width: 100%;
+      height: 150px;
+      margin-top: 10px;
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
+  </style>
+</head>
+<body>
+  <!-- Header Ad -->
+  <div class="ad">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_AD_SENSE_ID" crossorigin="anonymous"></script>
+    <!-- Ad Unit 1 -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-YOUR_AD_SENSE_ID"
+         data-ad-slot="AD_UNIT_ID_1"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
+  <header>
+    <h1>PDF to Text Converter</h1>
+    <p>Convert PDF files to Text quickly and easily.</p>
+  </header>
+
+  <div class="container">
+    <h2>Upload Your PDF File</h2>
+    <div class="tool">
+      <input type="file" id="input_pdfToText" accept=".pdf" />
+      <button onclick="handleConversion()">Convert to Text</button>
+      <div class="progress" id="progress_pdfToText"></div>
+      <textarea id="output_pdfToText" readonly></textarea>
+    </div>
+  </div>
+
+  <!-- Footer Ad -->
+  <div class="ad">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_AD_SENSE_ID" crossorigin="anonymous"></script>
+    <!-- Ad Unit 2 -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-YOUR_AD_SENSE_ID"
+         data-ad-slot="AD_UNIT_ID_2"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
+  <footer>
+    <p>&copy; 2023 Your Company Name. All rights reserved.</p>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
+  <script>
+    async function handleConversion() {
+      const input = document.getElementById('input_pdfToText');
+      const progress = document.getElementById('progress_pdfToText');
+      const output = document.getElementById('output_pdfToText');
+      const file = input.files[0];
+      if (!file) return alert('Please select a PDF file.');
+
+      progress.textContent = 'Processing: 0%';
+      try {
+        const text = await pdfToText(file, progress);
+        progress.textContent = 'Done!';
+        output.value = text;
+      } catch (error) {
+        progress.textContent = 'Error!';
+        output.value = `Error: ${error.message}`;
+      }
+    }
+
+    function updateProgress(progressElement, percentage) {
+      progressElement.textContent = `Processing: ${percentage}%`;
+    }
+
+    async function pdfToText(file, progressElement) {
+      const typedArray = await file.arrayBuffer();
+      const pdf = await pdfjsLib.getDocument(typedArray).promise;
+      let text = '';
+      for (let i = 1; i <= pdf.numPages; i++) {
+        const page = await pdf.getPage(i);
+        const content = await page.getTextContent();
+        text += content.items.map(item => item.str).join(' ');
+        updateProgress(progressElement, Math.round((i / pdf.numPages) * 100));
+      }
+      return text;
+    }
+  </script>
+</body>
+</html>
