--- a/index.html
+++ b/index.html
@@ -261,6 +261,78 @@
           <p>Calculate dates and birthdays easily.</p>
           <a href="/Tools/date-calculator.html" class="btn">Use Tool</a>
         </div>
+      <div class="tool-card">
+          <i class="fas fa-file-alt"></i>
+          <h2>PDF to Text</h2>
+          <p>Convert PDF files to plain text.</p>
+          <a href="/Tools/pdf-text.html" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
+          <i class="fas fa-table"></i>
+          <h2>PDF to CSV</h2>
+          <p>Convert PDF files to CSV format.</p>
+          <a href="/Tools/pdf-csv.html" class="btn">Use Tool</a>
+        </div>
+          <div class="tool-card">
+          <i class="fas fa-file-excel"></i>
+          <h2>PDF to Excel</h2>
+          <p>Extract tables and convert PDF to Excel.</p>
+          <a href="/Tools/pdf-excel.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-code"></i>
+          <h2>PDF to HTML</h2>
+          <p>Convert PDF documents to HTML format.</p>
+          <a href="/Tools/pdf-html.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-file-image"></i>
+          <h2>PDF to JPG</h2>
+          <p>Convert PDF pages into JPG images.</p>
+          <a href="/Tools/pdf-jpg.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-image"></i>
+          <h2>PDF to PNG</h2>
+          <p>Convert PDF pages into PNG images.</p>
+          <a href="/Tools/pdf-png.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-code-branch"></i>
+          <h2>PDF to JSON</h2>
+          <p>Extract and convert PDF content into JSON format.</p>
+          <a href="/Tools/pdf-json.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-sitemap"></i>
+          <h2>PDF to XML</h2>
+          <p>Transform PDF data into XML format.</p>
+          <a href="/Tools/pdf-xml.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-file-word"></i>
+          <h2>PDF to Word</h2>
+          <p>Convert PDF documents into editable Word files.</p>
+          <a href="/Tools/pdf-word.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-file-archive"></i>
+          <h2>PDF to ZIP</h2>
+          <p>Compress and package PDF content into a ZIP file.</p>
+          <a href="/Tools/pdf-zip.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-file-archive"></i>
+          <h2>PDF to RAR</h2>
+          <p>Convert and compress PDF into a RAR archive.</p>
+          <a href="/Tools/pdf-rar.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-file-image"></i>
+          <h2>PDF to WebP</h2>
+          <p>Convert PDF pages into WebP images.</p>
+          <a href="/Tools/pdf-webp.html" class="btn">Use Tool</a>
+        </div>
         <div class="tool-card">
           <i class="fas fa-file-archive"></i>
           <h2>File Converter</h2>
