--- a/index.html
+++ b/index.html
@@ -334,6 +334,42 @@
           <a href="/Tools/pdf-webp.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
+          <i class="fas fa-percent"></i>
+          <h2>Simple Interest Calculator</h2>
+          <p>Calculate interest based on principal, rate, and time.</p>
+          <a href="/Tools/simpleint-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-chart-line"></i>
+          <h2>Compound Interest Calculator</h2>
+          <p>Calculate compound interest over time.</p>
+          <a href="/Tools/compoundint-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-hand-holding-usd"></i>
+          <h2>Loan Calculator</h2>
+          <p>Estimate monthly loan payments.</p>
+          <a href="/Tools/loan-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-piggy-bank"></i>
+          <h2>SIP Calculator</h2>
+          <p>Calculate returns on Systematic Investment Plans.</p>
+          <a href="/Tools/sip-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-user-clock"></i>
+          <h2>Retirement Calculator</h2>
+          <p>Plan your retirement savings and goals.</p>
+          <a href="/Tools/retirement-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-exchange-alt"></i>
+          <h2>Currency Converter</h2>
+          <p>Convert amounts between different currencies.</p>
+          <a href="/Tools/currency-calc.html" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
           <i class="fas fa-file-archive"></i>
           <h2>File Converter</h2>
           <p>Convert files to various formats.</p>
