--- a/index.html
+++ b/index.html
@@ -370,6 +370,30 @@
           <a href="/Tools/currency-calc.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
+          <i class="fas fa-coins"></i>
+          <h2>Lump Sum Investment Calculator</h2>
+          <p>Calculate returns on one-time investments over time.</p>
+          <a href="/Tools/lumpsuminv-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-university"></i>
+          <h2>Fixed Deposit Calculator</h2>
+          <p>Calculate maturity amount and interest on FD.</p>
+          <a href="/Tools/fd-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-piggy-bank"></i>
+          <h2>Recurring Deposit Calculator</h2>
+          <p>Estimate returns on regular monthly RD deposits.</p>
+          <a href="/Tools/rd-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-file-invoice-dollar"></i>
+          <h2>Income Tax Calculator</h2>
+          <p>Calculate your income tax liability accurately.</p>
+          <a href="/Tools/incometax-calc.html" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
           <i class="fas fa-file-archive"></i>
           <h2>File Converter</h2>
           <p>Convert files to various formats.</p>
