--- a/incometax-calc.html
+++ b/incometax-calc.html
@@ -1,1 +1,127 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Income Tax Calculator</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f4f9;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .calculator-container {
+      background: #fff;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+    }
+    h1 {
+      text-align: center;
+      color: #4a90e2;
+      margin-bottom: 1.5rem;
+    }
+    .input-group {
+      margin-bottom: 1rem;
+    }
+    label {
+      display: block;
+      margin-bottom: 0.5rem;
+      font-weight: bold;
+    }
+    input {
+      width: 100%;
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
+    button {
+      width: 100%;
+      padding: 0.75rem;
+      background-color: #4a90e2;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #357abd;
+    }
+    .result-container {
+      margin-top: 2rem;
+      padding: 1rem;
+      background-color: #f9f9f9;
+      border-radius: 5px;
+    }
+    .result-container h2 {
+      margin-bottom: 1rem;
+      color: #333;
+    }
+    .result-container p {
+      margin: 0.5rem 0;
+      font-size: 1rem;
+    }
+    .result-container span {
+      font-weight: bold;
+      color: #4a90e2;
+    }
+  </style>
+</head>
+<body>
+  <div class="calculator-container">
+    <h1>Income Tax Calculator</h1>
+    <form id="income-tax-form">
+      <div class="input-group">
+        <label for="income">Annual Income (₹):</label>
+        <input type="number" id="income" required>
+      </div>
+      <div class="input-group">
+        <label for="deductions">Deductions (₹):</label>
+        <input type="number" id="deductions" required>
+      </div>
+      <button type="submit">Calculate</button>
+    </form>
+    <div id="result" class="result-container">
+      <h2>Results</h2>
+      <p><strong>Taxable Income:</strong> <span id="taxable-income">₹0.00</span></p>
+      <p><strong>Income Tax:</strong> <span id="income-tax">₹0.00</span></p>
+    </div>
+  </div>
+  <script>
+    document.getElementById('income-tax-form').addEventListener('submit', function (e) {
+      e.preventDefault();
+
+      const income = parseFloat(document.getElementById('income').value);
+      const deductions = parseFloat(document.getElementById('deductions').value);
+
+      const taxableIncome = income - deductions;
+      let incomeTax = 0;
+
+      if (taxableIncome <= 250000) {
+        incomeTax = 0;
+      } else if (taxableIncome <= 500000) {
+        incomeTax = (taxableIncome - 250000) * 0.05;
+      } else if (taxableIncome <= 1000000) {
+        incomeTax = 12500 + (taxableIncome - 500000) * 0.2;
+      } else {
+        incomeTax = 112500 + (taxableIncome - 1000000) * 0.3;
+      }
+
+      document.getElementById('taxable-income').textContent = `₹${taxableIncome.toFixed(2)}`;
+      document.getElementById('income-tax').textContent = `₹${incomeTax.toFixed(2)}`;
+    });
+  </script>
+</body>
+</html>
