--- a/pdf-word.html
+++ b/pdf-word.html
@@ -2,107 +2,122 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>PDF to Word - Visual & OCR Mode</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Convert PDF files to Word online. Fast, secure, and easy-to-use PDF to Word converter." />
-  <meta name="keywords" content="PDF to Word, PDF Converter, Online PDF Tools" />
-  <meta name="author" content="Your Company Name" />
-  <title>PDF to Word - Online PDF Converter</title>
-  <link rel="canonical" href="https://www.yourwebsite.com/pdf-to-word" />
   <style>
-    /* Same CSS as above */
+    body { font-family: Arial, sans-serif; max-width: 800px; margin: auto; padding: 20px; }
+    h1 { color: #2c3e50; }
+    label { display: block; margin-top: 10px; }
+    .progress { margin-top: 10px; color: green; }
+    textarea { width: 100%; height: 150px; margin-top: 10px; display: none; }
+    button { padding: 10px 20px; margin-top: 10px; }
+    select, input[type="checkbox"] { margin-top: 5px; }
+    .desc { background: #f9f9f9; padding: 10px; border-left: 4px solid #3498db; margin-bottom: 20px; }
   </style>
 </head>
 <body>
-  <!-- Header Ad -->
-  <div class="ad">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_AD_SENSE_ID" crossorigin="anonymous"></script>
-    <!-- Ad Unit 1 -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-YOUR_AD_SENSE_ID"
-         data-ad-slot="AD_UNIT_ID_1"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+  <h1>PDF to Word Converter</h1>
+
+  <div class="desc">
+    <strong>How it works:</strong>
+    <ul>
+      <li><strong>Visual Match (Image)</strong>: Converts PDF pages to images in Word. Preserves layout exactly. Not editable/searchable.</li>
+      <li><strong>Text + OCR</strong>: Extracts editable text. Use OCR for scanned/image-based PDFs.</li>
+      <li><strong>Visual Match + Text</strong>: Best of both. Keeps image layout and includes extracted or OCR'd text below.</li>
+    </ul>
   </div>
 
-  <header>
-    <h1>PDF to Word Converter</h1>
-    <p>Convert PDF files to Word quickly and easily.</p>
-  </header>
+  <div class="tool">
+    <input type="file" id="input_pdf" accept=".pdf" />
 
-  <div class="container">
-    <h2>Upload Your PDF File</h2>
-    <div class="tool">
-      <input type="file" id="input_pdfToWord" accept=".pdf" />
-      <button onclick="handleConversion()">Convert to Word</button>
-      <div class="progress" id="progress_pdfToWord"></div>
-      <textarea id="output_pdfToWord" readonly></textarea>
-    </div>
+    <label>
+      Conversion Mode:
+      <select id="mode">
+        <option value="image">🖼️ Visual Match (Image)</option>
+        <option value="text">📝 Text + OCR</option>
+        <option value="both">🖼️ + 📝 Visual Match + Text</option>
+      </select>
+    </label>
+
+    <label id="ocr_toggle" style="display:none;">
+      <input type="checkbox" id="use_ocr" />
+      Enable OCR (for scanned PDFs)
+    </label>
+
+    <button onclick="handleConversion()">Convert to Word</button>
+    <div class="progress" id="progress"></div>
+    <textarea id="output_text" readonly placeholder="Text output will appear here (for OCR/text mode only)..."></textarea>
   </div>
 
-  <!-- Footer Ad -->
-  <div class="ad">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_AD_SENSE_ID" crossorigin="anonymous"></script>
-    <!-- Ad Unit 2 -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-YOUR_AD_SENSE_ID"
-         data-ad-slot="AD_UNIT_ID_2"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  </div>
-
-  <footer>
-    <p>&copy; 2023 Your Company Name. All rights reserved.</p>
-  </footer>
-
+  <!-- Libraries -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/docxtemplater/3.28.1/docxtemplater.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.6.1/jszip.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.3/dist/tesseract.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/html-docx-js/dist/html-docx.min.js"></script>
+
+  <!-- Logic -->
   <script>
+    document.getElementById('mode').addEventListener('change', function() {
+      const mode = this.value;
+      document.getElementById('ocr_toggle').style.display = mode !== 'image' ? 'block' : 'none';
+      document.getElementById('output_text').style.display = mode !== 'image' ? 'block' : 'none';
+    });
+
     async function handleConversion() {
-      const input = document.getElementById('input_pdfToWord');
-      const progress = document.getElementById('progress_pdfToWord');
-      const output = document.getElementById('output_pdfToWord');
+      const input = document.getElementById('input_pdf');
+      const mode = document.getElementById('mode').value;
+      const useOCR = document.getElementById('use_ocr').checked;
+      const progress = document.getElementById('progress');
+      const output = document.getElementById('output_text');
       const file = input.files[0];
+
       if (!file) return alert('Please select a PDF file.');
+      output.value = '';
+      progress.textContent = 'Loading PDF...';
 
-      progress.textContent = 'Processing: 0%';
-      try {
-        const text = await pdfToText(file, progress);
-        const htmlContent = `<html><body><pre>${text}</pre></body></html>`;
-        const blob = new Blob([htmlContent], { type: 'application/vnd.openxmlformats-officedocument.wordprocessingml.document;charset=utf-8;' });
-        saveAs(blob, 'output.docx');
-        progress.textContent = 'Done!';
-        output.value = 'Word file generated. Check your downloads.';
-      } catch (error) {
-        progress.textContent = 'Error!';
-        output.value = `Error: ${error.message}`;
-      }
-    }
-
-    function updateProgress(progressElement, percentage) {
-      progressElement.textContent = `Processing: ${percentage}%`;
-    }
-
-    async function pdfToText(file, progressElement) {
       const typedArray = await file.arrayBuffer();
-      const pdf = await pdfjsLib.getDocument(typedArray).promise;
-      let text = '';
+      const pdf = await pdfjsLib.getDocument({ data: typedArray }).promise;
+      let html = '<html><body style="margin:0;padding:0;">';
+
       for (let i = 1; i <= pdf.numPages; i++) {
+        progress.textContent = `Processing page ${i} of ${pdf.numPages}...`;
         const page = await pdf.getPage(i);
-        const content = await page.getTextContent();
-        text += content.items.map(item => item.str).join(' ');
-        updateProgress(progressElement, Math.round((i / pdf.numPages) * 100));
+        const viewport = page.getViewport({ scale: 1.5 });
+
+        const canvas = document.createElement('canvas');
+        canvas.width = 595;
+        canvas.height = 842;
+        const ctx = canvas.getContext('2d');
+        await page.render({ canvasContext: ctx, viewport }).promise;
+        const imgData = canvas.toDataURL('image/png');
+
+        html += `<div style="page-break-after: always; text-align:center;">
+                   <img src="${imgData}" style="width:595pt;height:auto;max-width:100%;" />`;
+
+        if (mode === 'both' || mode === 'text') {
+          let text = '';
+          if (useOCR) {
+            progress.textContent = `Running OCR on page ${i}...`;
+            const { data: ocr } = await Tesseract.recognize(imgData, 'eng', {
+              logger: m => progress.textContent = `OCR Page ${i}: ${m.status} (${Math.round(m.progress * 100)}%)`
+            });
+            text = ocr.text;
+          } else {
+            const content = await page.getTextContent();
+            text = content.items.map(item => item.str).join(' ');
+          }
+          html += `<pre style="font-family:Arial;font-size:12px;color:#333;margin-top:10px;text-align:left;">${text}</pre>`;
+          output.value += `\n\nPage ${i}:\n${text}`;
+        }
+
+        html += `</div>`;
       }
-      return text;
+
+      html += '</body></html>';
+      progress.textContent = 'Generating Word file...';
+      const blob = window.htmlDocx.asBlob(html);
+      saveAs(blob, 'converted.docx');
+      progress.textContent = 'Done! Word file downloaded.';
     }
   </script>
 </body>
