--- a/index.html
+++ b/index.html
@@ -394,6 +394,60 @@
           <a href="/Tools/incometax-calc.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
+          <i class="fas fa-chart-line"></i>
+          <h2>SIP Step-Up Calculator</h2>
+          <p>Calculate returns with annual SIP increment.</p>
+          <a href="/Tools/sipstepup-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-exchange-alt"></i>
+          <h2>SWP Calculator</h2>
+          <p>Plan Systematic Withdrawal from your investments.</p>
+          <a href="/Tools/swp-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-id-card-alt"></i>
+          <h2>NPS Calculator</h2>
+          <p>Estimate returns and pension from NPS investments.</p>
+          <a href="/Tools/nps-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-briefcase"></i>
+          <h2>PPF Calculator</h2>
+          <p>Calculate interest and maturity value of PPF.</p>
+          <a href="/Tools/pff-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-handshake"></i>
+          <h2>Gratuity Calculator</h2>
+          <p>Calculate gratuity payable under Indian rules.</p>
+          <a href="/Tools/gratuity-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-home"></i>
+          <h2>HRA Calculator</h2>
+          <p>Calculate House Rent Allowance (HRA) exemption.</p>
+          <a href="/Tools/hra-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-chart-pie"></i>
+          <h2>Inflation Calculator</h2>
+          <p>See how inflation impacts the value of money over time.</p>
+          <a href="/Tools/inflation-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-home"></i>
+          <h2>Home Loan Calculator</h2>
+          <p>Calculate EMI and interest for home loans.</p>
+          <a href="/Tools/homeloan-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-car"></i>
+          <h2>Car Loan Calculator</h2>
+          <p>Estimate your car loan EMI and interest cost.</p>
+          <a href="/Tools/carloan-calc.html" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
           <i class="fas fa-file-archive"></i>
           <h2>File Converter</h2>
           <p>Convert files to various formats.</p>
