--- a/carloan-calc.html
+++ b/carloan-calc.html
@@ -1,1 +1,132 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Car Loan Calculator</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f4f9;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .calculator-container {
+      background: #fff;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+    }
+    h1 {
+      text-align: center;
+      color: #4a90e2;
+      margin-bottom: 1.5rem;
+    }
+    .input-group {
+      margin-bottom: 1rem;
+    }
+    label {
+      display: block;
+      margin-bottom: 0.5rem;
+      font-weight: bold;
+    }
+    input {
+      width: 100%;
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
+    button {
+      width: 100%;
+      padding: 0.75rem;
+      background-color: #4a90e2;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #357abd;
+    }
+    .result-container {
+      margin-top: 2rem;
+      padding: 1rem;
+      background-color: #f9f9f9;
+      border-radius: 5px;
+    }
+    .result-container h2 {
+      margin-bottom: 1rem;
+      color: #333;
+    }
+    .result-container p {
+      margin: 0.5rem 0;
+      font-size: 1rem;
+    }
+    .result-container span {
+      font-weight: bold;
+      color: #4a90e2;
+    }
+  </style>
+</head>
+<body>
+  <div class="calculator-container">
+    <h1>Car Loan Calculator</h1>
+    <form id="car-loan-form">
+      <div class="input-group">
+        <label for="loan-amount">Loan Amount (₹):</label>
+        <input type="number" id="loan-amount" required>
+      </div>
+      <div class="input-group">
+        <label for="interest-rate">Interest Rate (%):</label>
+        <input type="number" id="interest-rate" step="0.1" required>
+      </div>
+      <div class="input-group">
+        <label for="loan-tenure">Loan Tenure (Years):</label>
+        <input type="number" id="loan-tenure" required>
+      </div>
+      <button type="submit">Calculate</button>
+    </form>
+    <div id="result" class="result-container">
+      <h2>Results</h2>
+      <p><strong>Monthly EMI:</strong> <span id="emi">₹0.00</span></p>
+      <p><strong>Total Interest:</strong> <span id="total-interest">₹0.00</span></p>
+      <p><strong>Total Payment:</strong> <span id="total-payment">₹0.00</span></p>
+    </div>
+  </div>
+  <script>
+    document.getElementById('car-loan-form').addEventListener('submit', function (e) {
+      e.preventDefault();
+
+      const loanAmount = parseFloat(document.getElementById('loan-amount').value);
+      const interestRate = parseFloat(document.getElementById('interest-rate').value);
+      const loanTenure = parseFloat(document.getElementById('loan-tenure').value);
+
+      const monthlyInterestRate = interestRate / 12 / 100;
+      const numberOfPayments = loanTenure * 12;
+      const emi =
+        (loanAmount *
+          monthlyInterestRate *
+          Math.pow(1 + monthlyInterestRate, numberOfPayments)) /
+        (Math.pow(1 + monthlyInterestRate, numberOfPayments) - 1);
+
+      const totalPayment = emi * numberOfPayments;
+      const totalInterest = totalPayment - loanAmount;
+
+      document.getElementById('emi').textContent = `₹${emi.toFixed(2)}`;
+      document.getElementById('total-interest').textContent = `₹${totalInterest.toFixed(2)}`;
+      document.getElementById('total-payment').textContent = `₹${totalPayment.toFixed(2)}`;
+    });
+  </script>
+</body>
+</html>
